crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__for_obj_spec_force_visible.snap
---
source: crates/jrsonnet-rowan-parser/src/tests.rs
expression: "{ [k]: v for [k]::: v in obj }\n"
---
SOURCE_FILE@0..31
  EXPR@0..30
    EXPR_OBJECT@0..30
      OBJ_BODY_COMP@0..30
        L_BRACE@0..1 "{"
        WHITESPACE@1..2 " "
        MEMBER_FIELD_NORMAL@2..8
          FIELD_NAME_DYNAMIC@2..5
            L_BRACK@2..3 "["
            EXPR@3..4
              EXPR_VAR@3..4
                NAME@3..4
                  IDENT@3..4 "k"
            R_BRACK@4..5 "]"
          VISIBILITY@5..6
            COLON@5..6 ":"
          WHITESPACE@6..7 " "
          EXPR@7..8
            EXPR_VAR@7..8
              NAME@7..8
                IDENT@7..8 "v"
        WHITESPACE@8..9 " "
        FOR_OBJ_SPEC@9..28
          FOR_KW@9..12 "for"
          WHITESPACE@12..13 " "
          L_BRACK@13..14 "["
          NAME@14..15
            IDENT@14..15 "k"
          R_BRACK@15..16 "]"
          VISIBILITY@16..19
            COLON@16..17 ":"
            COLON@17..18 ":"
            COLON@18..19 ":"
          WHITESPACE@19..20 " "
          DESTRUCT_FULL@20..21
            NAME@20..21
              IDENT@20..21 "v"
          WHITESPACE@21..22 " "
          IN_KW@22..24 "in"
          WHITESPACE@24..25 " "
          EXPR@25..28
            EXPR_VAR@25..28
              NAME@25..28
                IDENT@25..28 "obj"
        WHITESPACE@28..29 " "
        R_BRACE@29..30 "}"
  WHITESPACE@30..31 "\n"
