crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__for_obj_spec_value_destruct.snap
---
source: crates/jrsonnet-rowan-parser/src/tests.rs
expression: "{ [k]: a + b for [k]: [a, b] in obj }\n"
---
SOURCE_FILE@0..38
  EXPR@0..37
    EXPR_OBJECT@0..37
      OBJ_BODY_COMP@0..37
        L_BRACE@0..1 "{"
        WHITESPACE@1..2 " "
        MEMBER_FIELD_NORMAL@2..12
          FIELD_NAME_DYNAMIC@2..5
            L_BRACK@2..3 "["
            EXPR@3..4
              EXPR_VAR@3..4
                NAME@3..4
                  IDENT@3..4 "k"
            R_BRACK@4..5 "]"
          VISIBILITY@5..6
            COLON@5..6 ":"
          WHITESPACE@6..7 " "
          EXPR@7..12
            EXPR_BINARY@7..12
              EXPR@7..8
                EXPR_VAR@7..8
                  NAME@7..8
                    IDENT@7..8 "a"
              WHITESPACE@8..9 " "
              PLUS@9..10 "+"
              WHITESPACE@10..11 " "
              EXPR@11..12
                EXPR_VAR@11..12
                  NAME@11..12
                    IDENT@11..12 "b"
        WHITESPACE@12..13 " "
        FOR_OBJ_SPEC@13..35
          FOR_KW@13..16 "for"
          WHITESPACE@16..17 " "
          L_BRACK@17..18 "["
          NAME@18..19
            IDENT@18..19 "k"
          R_BRACK@19..20 "]"
          VISIBILITY@20..21
            COLON@20..21 ":"
          WHITESPACE@21..22 " "
          DESTRUCT_ARRAY@22..28
            L_BRACK@22..23 "["
            DESTRUCT_FULL@23..24
              NAME@23..24
                IDENT@23..24 "a"
            COMMA@24..25 ","
            WHITESPACE@25..26 " "
            DESTRUCT_FULL@26..27
              NAME@26..27
                IDENT@26..27 "b"
            R_BRACK@27..28 "]"
          WHITESPACE@28..29 " "
          IN_KW@29..31 "in"
          WHITESPACE@31..32 " "
          EXPR@32..35
            EXPR_VAR@32..35
              NAME@32..35
                IDENT@32..35 "obj"
        WHITESPACE@35..36 " "
        R_BRACE@36..37 "}"
  WHITESPACE@37..38 "\n"
